src/test/ui/cast-errors-issue-43825.stderr
error[E0425]: cannot find value `error` in this scope
  --> $DIR/cast-errors-issue-43825.rs:12:17
   |
12 |     let error = error; //~ ERROR cannot find value `error`
   |                 ^^^^^ not found in this scope

error: aborting due to previous error

